--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "movies-front",
-  "homepage": "https://mariiagudkova.github.io/movies-explorer-frontend/",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
